# GNU_COMBA

./: .env.example  .gitignore  .gitmodules  CHANGELOG.md  Makefile  Makefile.bak.handedited  Makefile.in  README  README.md  README_langgraph.md  README_openwebui.md  analyze_enum_bug.json  analyze_enum_bug.py  benchmark_langgraph.py  config.status  configure  configure.ac  configure~  install_prompt_rules.py  launch_dual_gpu.sh  run.py  run.sh
.build_sample_e0_t0/: config.log.old  config.status  summary.csv  summary.txt  wave.vcd
.build_sample_e0_t8/: config.status  wave.vcd
.build_sample_e1_t0/: config.log.old  config.status  summary.csv  summary.txt  wave.vcd
.build_sample_e1_t8/: config.status  summary.csv  wave.vcd
RTLLM/modules/JC_counter/reports/: report_langgraph.RTLLM.txt.json  report_langgraph.RTLLM.txt.trial_1.json  report_langgraph.RTLLM.txt.trial_2.json  report_langgraph.RTLLM.txt.trial_3.json  report_langgraph.RTLLM.txt.trial_4.json  report_langgraph.RTLLM.txt.trial_5.json
RTLLM/modules/RAM/reports/: report_langgraph.RTLLM.txt.json  report_langgraph.RTLLM.txt.trial_1.json  report_langgraph.RTLLM.txt.trial_2.json  report_langgraph.RTLLM.txt.trial_3.json  report_langgraph.RTLLM.txt.trial_4.json  report_langgraph.RTLLM.txt.trial_5.json
RTLLM/modules/accu/reports/: report_langgraph.RTLLM.txt.json  report_langgraph.RTLLM.txt.trial_1.json  report_langgraph.RTLLM.txt.trial_2.json  report_langgraph.RTLLM.txt.trial_3.json  report_langgraph.RTLLM.txt.trial_4.json  (+1 more)
RTLLM/reports/: summary_langgraph.txt.md
RTLLM/reports/assets/: raw.4omini.txt  raw.o3mini.txt
RTLLM/reports/fixrate/: benchmark_RTLLM.txt_1trials.csv  benchmark_RTLLM.txt_1trials.json  benchmark_RTLLM.txt_1trials.md  benchmark_RTLLM.txt_1trials.tex  benchmark_RTLLM.txt_5trials.csv  benchmark_RTLLM.txt_5trials.json  benchmark_RTLLM.txt_5trials.md  benchmark_RTLLM.txt_5trials.tex  fixrate.RTLLM.txt.json  fixrate.xml.json
RTLLM/reports/script/: fix_rate.py
RTLLM/reports/tables/: correctness_gpt-4o-mini-2024-07-18.tex  fix_rate_gpt-4o-mini-2024-07-18.tex  gpt-4o-mini-2024-07-18.tex  gpt-4o-mini-2024-07-18.xml.tex
RTLLM_v2/modules/RAM/: testbench.v
RTLLM_v2/modules/accu/: testbench.v
RTLLM_v2/modules/width_8to16/: testbench.v
RTLLM_v2/reports/fixrate/: benchmark_RTLLM.txt_1trials.md  benchmark_RTLLM.txt_1trials.tex  benchmark_txt_1trials.json  benchmark_txt_5trials.csv  benchmark_txt_5trials.json  benchmark_txt_5trials.md  benchmark_txt_5trials.tex
VE_testbench/generator/.build_sample_e0_t0/: Makefile  config.log.old  problems.mk  summary.csv  summary.txt
VE_testbench/generator/.build_sample_e0_t8/: config.log.old  summary.csv  summary.txt
VE_testbench/generator/.build_sample_e1_t0/: config.log.old  summary.csv  summary.txt
VE_testbench/generator/.build_sample_e1_t8/: config.log.old  summary.csv  summary.txt
VE_testbench/langgraph/.build_sample_e0_t0/: Makefile  error_problems.txt  summary.csv  summary.txt
VE_testbench/langgraph/.build_sample_e0_t8/: Makefile  config.log.old  error_problems.txt  summary.csv  summary.txt
VE_testbench/langgraph/.build_sample_e1_t0/: Makefile  error_problems.txt  samples.mk  summary.csv  summary.txt
VE_testbench/langgraph/.build_sample_e1_t8/: Makefile  error_problems.txt  samples.mk  summary.csv  summary.txt
reports/: analyze_syntax_rtllm.json  analyze_syntax_rtllm_v2.json  flowcharts_documentation.md  plot_viewer.md  summary_langgraph.RTLLM.txt.json  summary_langgraph.RTLLM.txt.md  summary_langgraph.txt.json  summary_langgraph.txt.md  summary_langgraph.xml.json  summary_langgraph.xml.md
reports/rtllm/exceptionTrialBench/: exceptionTrialBench.json  exceptionTrialBench.tex
reports/rtllm/fixrate/: benchmark_RTLLM.txt_1trials.csv  benchmark_RTLLM.txt_1trials.md  benchmark_RTLLM.txt_5trials.csv  benchmark_RTLLM.txt_5trials.json  benchmark_RTLLM.txt_5trials.md  benchmark_RTLLM.txt_5trials.tex
reports/rtllm/tables/: fix_rate_gpt-4o-mini-2024-07-18.xml.tex
reports/rtllm_v2/fixrate/: benchmark_RTLLM.txt_1trials.csv  benchmark_RTLLM.txt_1trials.json  benchmark_txt_1trials.csv  benchmark_txt_1trials.md  benchmark_txt_1trials.tex  benchmark_txt_5trials.csv  benchmark_txt_5trials.json  benchmark_txt_5trials.md  benchmark_txt_5trials.tex
src/: DatasetCompile-RankStatic.ipynb  analyze_self_consistency.py  benchmark_langgraph.py  main.py  main_langgraph.py  patch_prompts.py  run.py
src/GreenNodeSources/: Alpaca_+_Mistral_v3_7b_full_example-GreenNode_LoRa256_chat_v2.ipynb  Alpaca_+_Mistral_v3_7b_full_example-GreenNode_LoRa256_chat_v3.ipynb
src/PyraNetExplorer/: Check_Extraction_Correctness.ipynb  DatasetCompile.ipynb  PyraNetExplore-Copy1.ipynb  PyraNetExplore-Copy2.ipynb  PyraNetExplore-Final.ipynb  PyraNetExplore-FirstOfficialTraining.ipynb  PyraNetExplore-V1_ok.ipynb  PyraNetExplore.ipynb  PyranetExploreCPU.ipynb  PyranetExport_Final.ipynb
src/archive/: DeepSeekPromptChat-Copy1.ipynb  DeepSeekPromptChat.ipynb  LoRa_Man_2.0.ipynb  LoraManual-Copy1.ipynb  LoraManual.ipynb  huggingface.py
src/archive/old_files/: Alpaca_+_Mistral_v3_7b_full_example-GreenNode.ipynb  Alpaca_+_Mistral_v3_7b_full_example.ipynb
src/archive/paper/: Untitled.ipynb  out.tex
src/flow_src/: config.json  main.py
src/flow_src/inputs/: PyranetExtractDataseByRangeOfLogicCell.json  PyranetFilterDataset.json  PyranetSynthesis.json
src/flow_src/scripts/: PyranetExtractDataseByRangeOfLogicCell.py  PyranetFilterDataset.py  PyranetSynthesis.py
src/inference_class/: inferenceclass.py
src/langgraph_core/: OVERVIEW.txt  api_server.py  comba_pipeline.py  fsm_patch.py  graph.py  langgraph_app.py  llm_interface.py  multi_attempt.py  multi_sample.py  pipeline_runner.py  prompts.py  prompts.py.bak  prompts.py.bak2  prompts.py.bak3  requirements.txt  sanitizer_dev.py  stub_llm.py  test_debugger_model.py  test_end_repair.py  test_guard.py  test_pipeline.py  verilog_sanitizer.py  xmlDescription.py  xml_schema.py
src/scratch/: Untitled-Copy1.ipynb  Untitled.ipynb  prompt.txt  test_vvp.py  text.v
src/tools/: curl.sh  endpoint.py  monitor.py  test.py
src/yosys_run/: run4.sh
(+420 files in other folders)
